Changes the background colour and text colour randomly but ensures they are never the same and there is a shadow on the text so its readable

--- a/index.css
+++ b/index.css
@@ -17,4 +17,6 @@ body{
     align-items: center;
     text-align: center;
     font-size: calc(5vw + 20px);
+    text-shadow: 0px 0px 3px black;
 }
+
